--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Wanderlust Tours</title>
+  <title>UK Tours & Travels</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
 
   <!-- Header -->
   <header>
-    <h1>Wanderlust Tours</h1>
+    <h1>UK Tours & Travels</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#services">Services</a>
@@ -30,14 +30,14 @@
   <!-- About -->
   <section id="about">
     <h2>About Us</h2>
-    <p>Wanderlust Tours is your trusted travel partner, offering unforgettable experiences and guided tours worldwide.</p>
+    <p>UK Tours & Travels is your trusted travel partner, offering unforgettable experiences and guided tours worldwide.</p>
   </section>
 
   <!-- Services -->
   <section id="services">
     <h2>Our Services</h2>
     <div class="service-cards">
-      <div class="card">Flight Bookings</div>
+      <div class="card">Car Bookings</div>
       <div class="card">Hotel Reservations</div>
       <div class="card">Guided Tours</div>
       <div class="card">Custom Travel Packages</div>
@@ -49,20 +49,20 @@
     <h2>Top Destinations</h2>
     <div class="destinations">
       <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Paris">
-        <h3>Paris</h3>
+        <img src="https://via.placeholder.com/270x180" alt="Uttrakhand">
+        <h3>Uttrakhand</h3>
       </div>
       <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Bali">
-        <h3>Bali</h3>
+        <img src="https://via.placeholder.com/270x180" alt="Delhi">
+        <h3>Delhi</h3>
       </div>
       <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="New York">
-        <h3>New York</h3>
+        <img src="https://via.placeholder.com/270x180" alt="Uttar pradesh">
+        <h3>Uttar pradesh</h3>
       </div>
       <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Tokyo">
-        <h3>Tokyo</h3>
+        <img src="https://via.placeholder.com/270x180" alt="Shimla">
+        <h3>Shimla</h3>
       </div>
     </div>
   </section>
@@ -70,15 +70,16 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: info@wanderlusttours.com</p>
-    <p>Phone: +91 12345 67890</p>
-    <button onclick="window.location.href='mailto:info@wanderlusttours.com'">Email Us</button>
+    <p>Email: zander78945@gmail.com</p>
+    <p>Phone: +91 9267954993</p>
+    <button onclick="window.location.href='mailto:zander78945@gmail.com'">Email Us</button>
   </section>
 
   <!-- Footer -->
   <footer>
-    &copy; 2025 Wanderlust Tours. All Rights Reserved.
+    &copy; 2015 UK Tours & Travels. All Rights Reserved.
   </footer>
 
 </body>
 </html>
+
