--- a/index.html
+++ b/index.html
@@ -22,25 +22,30 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h2>Explore the World With Us</h2>
-    <p>Your Adventure Starts Here</p>
-    <button onclick="window.location.href='#contact'">Book Now</button>
+    <video autoplay muted loop class="hero-video">
+      <source src="https://www.videezy.com/static/videos/UK_Travel.mp4" type="video/mp4">
+    </video>
+    <div class="overlay">
+      <h2>Explore the UK With Us</h2>
+      <p>Your Adventure Starts Here</p>
+      <a href="#contact" class="cta-button">Book Now</a>
+    </div>
   </section>
 
   <!-- About -->
   <section id="about">
     <h2>About Us</h2>
-    <p>UK Tours & Travels is your trusted travel partner, offering unforgettable experiences and guided tours worldwide.</p>
+    <p>UK Tours & Travels is your trusted travel partner, offering guided tours, flight bookings, hotel reservations, and unforgettable UK experiences.</p>
   </section>
 
   <!-- Services -->
   <section id="services">
     <h2>Our Services</h2>
     <div class="service-cards">
-      <div class="card">Car Bookings</div>
+      <div class="card">Flight Booking</div>
       <div class="card">Hotel Reservations</div>
       <div class="card">Guided Tours</div>
-      <div class="card">Custom Travel Packages</div>
+      <div class="card">Custom Packages</div>
     </div>
   </section>
 
@@ -49,20 +54,20 @@
     <h2>Top Destinations</h2>
     <div class="destinations">
       <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Uttrakhand">
-        <h3>Uttrakhand</h3>
+        <img src="https://via.placeholder.com/270x180" alt="London">
+        <h3>London</h3>
       </div>
       <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Delhi">
-        <h3>Delhi</h3>
+        <img src="https://via.placeholder.com/270x180" alt="Edinburgh">
+        <h3>Edinburgh</h3>
       </div>
       <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Uttar pradesh">
-        <h3>Uttar pradesh</h3>
+        <img src="https://via.placeholder.com/270x180" alt="Liverpool">
+        <h3>Liverpool</h3>
       </div>
       <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Shimla">
-        <h3>Shimla</h3>
+        <img src="https://via.placeholder.com/270x180" alt="Cambridge">
+        <h3>Cambridge</h3>
       </div>
     </div>
   </section>
@@ -70,16 +75,15 @@
   <!-- Contact -->
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Email: zander78945@gmail.com</p>
-    <p>Phone: +91 9267954993</p>
+    <p>Email: <a href="mailto:zander78945@gmail.com">zander78945@gmail.com</a></p>
+    <p>Phone: +44 1234 567890</p>
     <button onclick="window.location.href='mailto:zander78945@gmail.com'">Email Us</button>
   </section>
 
   <!-- Footer -->
   <footer>
-    &copy; 2015 UK Tours & Travels. All Rights Reserved.
+    &copy; 2025 UK Tours & Travels. All Rights Reserved.
   </footer>
 
 </body>
 </html>
-
