--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <div class="place">
         <img src="https://via.placeholder.com/270x180" alt="London">
         <h3>London</h3>
+<link href="https://www.gettyimages.co.uk/detail/video/footage-day-to-night-time-lapse-of-the-shard-london-stock-footage/2171280290?adppopup=true" rel="stylesheet">
       </div>
       <div class="place">
         <img src="https://via.placeholder.com/270x180" alt="Edinburgh">
@@ -87,3 +88,4 @@
 
 </body>
 </html>
+
