--- a/index.html
+++ b/index.html
@@ -1,91 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UK Tours & Travels</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tour & Travel | Explore India</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <!-- Header -->
   <header>
-    <h1>UK Tours & Travels</h1>
+    <div class="logo">Tour & Travel</div>
     <nav>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#destinations">Destinations</a>
+      <a href="#home">Home</a>
+      <a href="#packages">Packages</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <video autoplay muted loop class="hero-video">
-      <source src="https://www.videezy.com/static/videos/UK_Travel.mp4" type="video/mp4">
-    </video>
+  <section id="home" class="hero">
     <div class="overlay">
-      <h2>Explore the UK With Us</h2>
-      <p>Your Adventure Starts Here</p>
-      <a href="#contact" class="cta-button">Book Now</a>
+      <h1>Discover Incredible India</h1>
+      <p>Unforgettable journeys, curated just for you.</p>
+      <button onclick="scrollToPackages()">View Packages</button>
     </div>
   </section>
 
-  <!-- About -->
-  <section id="about">
-    <h2>About Us</h2>
-    <p>UK Tours & Travels is your trusted travel partner, offering guided tours, flight bookings, hotel reservations, and unforgettable UK experiences.</p>
-  </section>
+  <section id="packages" class="packages">
+    <h2>Top Tour Packages</h2>
+    <div class="cards">
 
-  <!-- Services -->
-  <section id="services">
-    <h2>Our Services</h2>
-    <div class="service-cards">
-      <div class="card">Flight Booking</div>
-      <div class="card">Hotel Reservations</div>
-      <div class="card">Guided Tours</div>
-      <div class="card">Custom Packages</div>
-    </div>
-  </section>
-
-  <!-- Destinations -->
-  <section id="destinations">
-    <h2>Top Destinations</h2>
-    <div class="destinations">
-      <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="London">
-        <h3>London</h3>
-<link href="https://www.gettyimages.co.uk/detail/video/footage-day-to-night-time-lapse-of-the-shard-london-stock-footage/2171280290?adppopup=true" rel="stylesheet">
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Nainital" />
+        <h3>Uttarakhand Weekend Escape</h3>
+        <p><strong>Duration:</strong> 2 Nights / 3 Days</p>
+        <p><strong>Route:</strong> Delhi → Nainital</p>
+        <p>Local sightseeing (Naini Lake, Mall Road, Naina Peak etc.), stays & meals included.</p>
+        <div class="price">₹ 10,999 / person</div>
+        <button class="book">Book Now & Plan This Trip</button>
       </div>
-      <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Edinburgh">
-        <h3>Edinburgh</h3>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1526778548025-fa2f459cd5c1" alt="Shimla" />
+        <h3>Shimla Deluxe from Delhi</h3>
+        <p><strong>Duration:</strong> 3 Nights / 4 Days</p>
+        <p><strong>Route:</strong> Delhi → Shimla</p>
+        <p>Deluxe hotel, sightseeing (Kufri etc.), meals & transfers included.</p>
+        <div class="price">₹ 5,499 / person</div>
+        <button class="book">Book Now – Shimla Deals</button>
       </div>
-      <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Liverpool">
-        <h3>Liverpool</h3>
-      </div>
-      <div class="place">
-        <img src="https://via.placeholder.com/270x180" alt="Cambridge">
-        <h3>Cambridge</h3>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:zander78945@gmail.com">zander78945@gmail.com</a></p>
-    <p>Phone: +44 1234 567890</p>
-    <button onclick="window.location.href='mailto:zander78945@gmail.com'">Email Us</button>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 UK Tours & Travels. All Rights Reserved.
-  </footer>
-
-</body>
-</html>
-
