--- a/index.html
+++ b/index.html
@@ -30,21 +30,66 @@
     <div class="cards">
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Nainital" />
+        <img src="https://images.unsplash.com/photo-1593691509543-8a37f6f2b1e4?auto=format&fit=crop&w=800&q=60" alt="Nainital" />
         <h3>Uttarakhand Weekend Escape</h3>
         <p><strong>Duration:</strong> 2 Nights / 3 Days</p>
         <p><strong>Route:</strong> Delhi → Nainital</p>
         <p>Local sightseeing (Naini Lake, Mall Road, Naina Peak etc.), stays & meals included.</p>
         <div class="price">₹ 10,999 / person</div>
-        <button class="book">Book Now & Plan This Trip</button>
+        <button class="book" data-package="Uttarakhand Weekend Escape">Book Now & Plan This Trip</button>
       </div>
 
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1526778548025-fa2f459cd5c1" alt="Shimla" />
+        <img src="https://images.unsplash.com/photo-1575537302964-96cd47c06b1b?auto=format&fit=crop&w=800&q=60" alt="Shimla" />
         <h3>Shimla Deluxe from Delhi</h3>
         <p><strong>Duration:</strong> 3 Nights / 4 Days</p>
         <p><strong>Route:</strong> Delhi → Shimla</p>
         <p>Deluxe hotel, sightseeing (Kufri etc.), meals & transfers included.</p>
         <div class="price">₹ 5,499 / person</div>
-        <button class="book">Book Now – Shimla Deals</button>
+        <button class="book" data-package="Shimla Deluxe from Delhi">Book Now – Shimla Deals</button>
       </div>
+
+      <div class="card">
+        <img src="https://images.unsplash.com/photo-1506377247377-2a5b3b417ebb?auto=format&fit=crop&w=800&q=60" alt="Varanasi" />
+        <h3>UP Heritage & Spiritual Tour</h3>
+        <p><strong>Duration:</strong> 6 Nights / 7 Days</p>
+        <p><strong>Destinations:</strong> Varanasi, Ayodhya, Prayagraj, Lucknow, Agra</p>
+        <p>Heritage, temples & culture with accommodation and transfers.</p>
+        <div class="price">₹ 21,999 / person</div>
+        <button class="book" data-package="UP Heritage & Spiritual Tour">Book Now – UP Tour</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- Booking Form -->
+  <section id="booking" class="booking">
+    <h2>Book Your Trip</h2>
+    <form id="bookingForm">
+      <label>Selected Package</label>
+      <input type="text" id="packageName" readonly>
+
+      <label>Your Name</label>
+      <input type="text" id="userName" placeholder="Enter your name" required>
+
+      <label>Email</label>
+      <input type="email" id="userEmail" placeholder="Enter your email" required>
+
+      <label>Contact Number</label>
+      <input type="tel" id="userPhone" placeholder="Enter your phone number" required>
+
+      <button type="submit">Submit Booking</button>
+    </form>
+  </section>
+
+  <section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <p>You can add your email or phone number here later.</p>
+  </section>
+
+  <footer>
+    <p>© 2025 Tour & Travel | Designed with ❤️ by Rahul</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
