--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tour & Travel | Explore India</title>
+  <title>UK UK Tour & Travel | Explore India</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
-    <div class="logo">Tour & Travel</div>
+    <div class="logo">UK Tour & Travel</div>
     <nav>
       <a href="#home">Home</a>
       <a href="#packages">Packages</a>
@@ -23,6 +23,7 @@
       <p>Unforgettable journeys, curated just for you.</p>
       <button onclick="scrollToPackages()">View Packages</button>
     </div>
+    <link href="https://www.facebook.com/"
   </section>
 
   <section id="packages" class="packages">
@@ -87,9 +88,10 @@
   </section>
 
   <footer>
-    <p>© 2025 Tour & Travel | Designed with ❤️ by Rahul</p>
+    <p>© 2025 UK Tour & Travel | Designed with ❤️ by Rahul</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
